feat: Auto field value generator
Can be used to generate auto id's
Works via UI, upload or api
see readme for usage

refactor utils to allow for fast and simple tests and different auto field generators