@@ -27,6 +27,8 @@ class SqlTable implements Table {
   private SqlTableMetadata metadata;
   private static Logger logger = LoggerFactory.getLogger(SqlTable.class);
 
+  private SqlTypeUtils sqlTypeUtils = new SqlTypeUtils();
+
   SqlTable(SqlDatabase db, SqlTableMetadata metadata) {
     this.db = db;
     this.metadata = metadata;
@@ -354,7 +356,7 @@ class SqlTable implements Table {
     subclassRows.get(subclassName).clear();
   }
 
-  private static int insertBatch(
+  private int insertBatch(
       SqlTable table, List<Row> rows, boolean updateOnConflict, Set<String> updateColumns) {
     boolean inherit = table.getMetadata().getInherit() != null;
     if (inherit) {
@@ -387,7 +389,7 @@ class SqlTable implements Table {
     LocalDateTime now = LocalDateTime.now();
     for (Row row : rows) {
       // get values
-      Map values = SqlTypeUtils.validateAndGetVisibleValuesAsMap(row, table.getMetadata(), columns);
+      Map values = sqlTypeUtils.validateAndGetVisibleValuesAsMap(row, table.getMetadata(), columns);
       if (!inherit) {
         values.put(MG_INSERTEDBY, user);
         values.put(MG_INSERTEDON, now);
@@ -439,7 +441,7 @@ class SqlTable implements Table {
         .collect(Collectors.toSet());
   }
 
-  private static int updateBatch(SqlTable table, List<Row> rows, Set<String> updateColumns) {
+  private int updateBatch(SqlTable table, List<Row> rows, Set<String> updateColumns) {
     boolean inherit = table.getMetadata().getInherit() != null;
     if (inherit) {
       SqlTable inheritedTable = table.getInheritedTable();
@@ -461,7 +463,7 @@ class SqlTable implements Table {
     }
     LocalDateTime now = LocalDateTime.now();
     for (Row row : rows) {
-      Map values = SqlTypeUtils.validateAndGetVisibleValuesAsMap(row, table.getMetadata(), columns);
+      Map values = sqlTypeUtils.validateAndGetVisibleValuesAsMap(row, table.getMetadata(), columns);
       if (!inherit) {
         values.put(MG_UPDATEDBY, user);
         values.put(MG_UPDATEDON, now);
@@ -567,9 +569,7 @@ class SqlTable implements Table {
   private static void deleteBatch(SqlTable table, Collection<Row> rows) {
     if (!rows.isEmpty()) {
       List<String> keyNames =
-          table.getMetadata().getPrimaryKeyFields().stream()
-              .map(Field::getName)
-              .collect(Collectors.toList());
+          table.getMetadata().getPrimaryKeyFields().stream().map(Field::getName).toList();
 
       // in case no primary key is defined, use all columns
       if (keyNames == null) {
